# gto-wizard-clone

./: .checkpoint.json  .coverage  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  DEV_PLAN_2d_A.md  FEATURES.yaml  Makefile  README.md  SPEC.md  SPEC.md.new  cf_config.yml  deploy.sh  docker-compose.postgres.yml  docker-compose.yml  fix_paths.py  nx.json  package-lock.json  package.json  pyproject.toml  start.sh  start_server.py  test_import.py  test_pheval.py  turbo.json  verify_final.py
.github/workflows/: ci.yml  deploy.yml  release.yml
.turbo/cache/: 039ba562f2db3f06-manifest.json  039ba562f2db3f06-meta.json  039ba562f2db3f06.tar.zst  18bc55d2fddb6910-manifest.json  18bc55d2fddb6910-meta.json  18bc55d2fddb6910.tar.zst
apps/api/: Dockerfile  main.py  requirements.txt  solver.py  variants.py
apps/api/data/: preflop_data.py  preflop_equities.json
apps/solver/: Dockerfile  __init__.py  requirements.txt  server.py  service.py  solver_pb2.py  solver_pb2_grpc.py  start_grpc_server.py  test_grpc_service.py
apps/web/: .gitignore  Dockerfile  next.config.ts  package.json  playwright-test.sh  playwright.ci.ts  playwright.config.ts  tailwind.config.js  tsconfig.tsbuildinfo
apps/worker/: Dockerfile  celery_app.py  requirements.txt  tasks.py
docs/: API.md  DEPLOYMENT.md
docs/plans/: GTO_WIZARD_CRON_PLAN.md
scripts/: deploy-health-check.sh  dev-local.sh  install-python.sh  setup-local-postgres.sh  update_checkpoint.py
test-results/apps-web-e2e-courses-Cours-32059-s-without-errors-at-courses/: error-context.md
(+273 files in other folders)
