[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gto-wizard-clone"
version = "0.1.0"
description = "Open-source GTO poker training platform"
readme = "README.md"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["packages/poker-core/tests", "apps/solver/tests", "apps/api/tests"]
python_files = ["test_*.py"]
addopts = "-p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.cibuildwheel]
build = "cp312-manylinux"